s3 sink issues fixed